Bug 168306 - When a previously saved .odg file is opened in LibreOffice Draw, any line is selected, then under “properties” the line “thickness” is selected, the previously saved line thickness automatically changes to 0.5.
Summary: When a previously saved .odg file is opened in LibreOffice Draw, any line is ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0 target:25.8.2 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties
  Show dependency treegraph
 
Reported: 2025-09-07 12:53 UTC by Arnab C
Modified: 2025-09-15 09:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnab C 2025-09-07 12:53:46 UTC
Description:
Considering a line diagram is already created and saved in LibreOffice Draw as .odg file, when the .odg is again opened in LibreOffice Draw to edit the diagram, this particular issue happens. Suppose the previous diagram had a line with Line Thickness 6 and then saved as .odg file and closed. Now if the .odg file is again opened in LibreOffice Draw, when that line is selected and the option “Line Thickness” is selected under “Properties”, the thickness suddenly changes from 6 to 0.5 automatically even without selecting a particular thickness.

The described problem does not happen if we do the changes in a particular session before saving & closing the .odg file. Suppose, we create a new drawing, insert a line, select the line thickness as 6 pt., then after some other drawing again select that 6 pt. Line, go to properties, then select the option  “Thickness”, this time the thickness does not changes automatically but the previously selected thickness 6 pt. remains same as it is and only changes when we manually change the thickness from 6 pt. to any other pt.
 As we close the file after saving and then open the saved .odg file again in LibreOffice Draw, this described issue is seen.

Steps to Reproduce:
1. Open LibreOffice Draw.
2. Insert a line, select the line, under the “Properties” select line “Thickness” and choose 6 pt.
3. Now the line is having thickness 6 pt. Save the drawing as .odg file.
4. Close LibreOffice Draw.
5. Again open the same .odg file in LibreOffice Draw.
6. Select the previously drawn line of thickness 6 pt, under the “Properties” select line “Thickness”. Even without selecting a line thickness, the previously 6 pt. thick line immediately converts into a 0.5 pt. thick line. So the previously saved thickness is now lost.
This issue is also true for any thickness more than 0.5 and any line style (i.e. dotted, dashed, solid). 
This problem is severe when there are a lot of different line thicknesses are involved with different lines in the whole diagram. It is literally not possible to remember what was the previous line thickness of that particular line when the thickness immediately lost as we select the thickness option.

Actual Results:
Select the previously drawn line of thickness 6 pt, under the “Properties” select line “Thickness”. Even without selecting a line thickness, the previously 6 pt. thick line immediately converts into a 0.5 pt. thick line. So the previously saved thickness is now lost.
This problem is severe when there are a lot of different line thicknesses are involved with different lines in the whole diagram. It is literally not possible to remember what was the previous line thickness of that particular line when the thickness immediately lost as we select the thickness option.

Expected Results:
Select the previously drawn line of thickness 6 pt, under the “Properties” select line “Thickness”. 
The Line Thickness remains as the previously selected thickness that is 6 pt. And it changes only when we manually select a particular thickness for that line.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Build Date & Hardware:
The issue is still present in the latest LibreOffice version :
Version: 25.8.1.1 (X86_64)
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-IN (en_IN); UI: en-US
Calc: threaded

The problem was present in the previous versions also. Do not exactly know, from which version this issue started.
Comment 1 BogdanB 2025-09-07 19:41:13 UTC
Its ok in
Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded

Maybe is just a Windows bug? Need more testing.
Comment 2 m_a_riosv 2025-09-07 21:44:33 UTC
I think the issue is that when dragging the 'line - thickness' on the sidebar, the 0,5 gets to be selected.

Version: 25.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 7d02d980fd365aa112354761f2dc81d7bc6a6e83
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Arnab C 2025-09-09 19:19:46 UTC
By default, the figure properties appear in the right sidebar in LibreOffice Draw Layout for Windows OS. Yes, the issue happens only in the right side-bar properties. When the line thickness is manually changed from other options (i.e. right click > line > line thickness) then the problem does not happen. But we must consider the fact that the right side-bar properties is the only pane where all the formatting options are present together, which makes this properties pane the first choice for any figure editing. Otherwise, manually finding all formatting options is very tedious process.
Comment 4 BogdanB 2025-09-10 05:31:29 UTC
I confirm also on Windows, in the moment we click on the line and also in the sidabar in order to choose maybe another thickness we get instant the first value from the list.

Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ro-RO (en_US); UI: en-US
Calc: threaded
Comment 5 BogdanB 2025-09-10 05:37:41 UTC
I see this as a major bug since someone could lose it's drowing info by just selecting different shapes in the project.
Comment 6 Arnab C 2025-09-10 07:02:48 UTC
I agree, this is a major problem. I am using LibreOffice Draw for many years and practically this issue always seems major while working with any scientific diagram/figure where line thickness is an important aspect.
I also suggest to look into another related major Bug 168301. Practically a major bug for Draw. Inaccurate vector file exporting issue.
Comment 7 Telesto 2025-09-13 02:49:06 UTC
Already present in
Version: 7.0.0.3
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU threads: 8; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 8 Telesto 2025-09-13 21:24:35 UTC
Fine in
Versie: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU-threads: 4; Besturingssysteem: Windows 10.0; UI-render: standaard; VCL: win; 
Locale: nl-NL (nl_NL); UI-taal: nl-NL
Calc: CL
Comment 9 Saburo 2025-09-14 11:11:36 UTC
bibisected with win64-7.0
Version: 6.5.0.0.alpha0+ (x64)
commit 4f6d95ead1286748810e937c7672de08b8b39a38
author	Caolán McNamara <caolanm@redhat.com>	Mon Jan 06 09:51:42 2020 +0000

weld LinePropertyPanel

Change-Id: If4ff18c3d312d273e9d28aeef97db053f56007ca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86309
Comment 10 Caolán McNamara 2025-09-14 18:57:24 UTC
https://gerrit.libreoffice.org/c/core/+/190934 to set the current line width in the popup when it is shown
Comment 11 Commit Notification 2025-09-14 20:03:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/830a06afe26279edc3527ccdecb5c9e2b347cfd5

Resolves: tdf#168306 set current line width at popup time

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-09-15 07:44:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f8aa0ff0e7eb08d5822858688dc525ec0201b09e

Resolves: tdf#168306 set current line width at popup time

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2025-09-15 09:27:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/b34230da030dfe1e39d1f94e253c7fd2c680728e

Resolves: tdf#168306 set current line width at popup time

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.