Resolves: tdf#168306 set current line width at popup time

Change-Id: I82c8151566459d1429cd3b4517b43ace3fbeca60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190934
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 830a06afe26279edc3527ccdecb5c9e2b347cfd5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190935
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit f8aa0ff0e7eb08d5822858688dc525ec0201b09e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190946
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>